force-app/main/default/objects/Contact_Location__c/Contact_Location__c.object-meta.xml
<CustomObject>
    <label>Contact Location</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Contact Location</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>