force-app/main/default/objects/Contact_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Contact Locations</relationshipLabel>
    <relationshipName>Contact_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>