force-app/main/default/objects/Contact_Location__c/fields/Location_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Location_Identifier__c</fullName>
    <formula>Location__r.addrline1__c &amp; BR() &amp;
Location__r.addrline2__c &amp; BR() &amp;
Location__r.addrline3__c &amp; BR() &amp; 
Location__r.addrline4__c &amp; BR() &amp;
Location__r.addrline5__c &amp; BR() &amp;
Location__r.addrphone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Identifier</label>
    <type>Text</type>
</CustomField>